<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/fragment_drinker">

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/pickersBottomBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="linearPickerWeight,linearPickerSex" />

    <LinearLayout
        android:id="@+id/linearPickerWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        android:layout_marginStart="@dimen/spacing_sm"
        android:layout_marginEnd="@dimen/spacing_xs"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/spacing_lg"
        android:paddingEnd="@dimen/spacing_lg"
        app:layout_constraintEnd_toStartOf="@+id/linearPickerSex"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5">

        <TextView
            android:id="@+id/textViewPickerWeightTitle"
            style="@style/PillTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutWeightInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:hint="@string/weight"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidthFocused="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAccessibility="yes"
                android:inputType="numberDecimal"
                android:minEms="4"
                android:textAlignment="center" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearPickerSex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        android:layout_marginStart="@dimen/spacing_xs"
        android:layout_marginEnd="@dimen/spacing_sm"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/spacing_sm"
        android:paddingEnd="@dimen/spacing_sm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearPickerWeight"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5">

        <TextView
            style="@style/PillTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:orientation="vertical">
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"

                />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioSexOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:checked="true"
                />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                />
        </RadioGroup>


    </LinearLayout>

    <TextView
        android:id="@+id/textViewAlcoholToleranceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PillTitle"
        android:text="@string/user_health"
        android:layout_marginTop="@dimen/spacing_sm"
        app:layout_constraintTop_toBottomOf="@id/pickersBottomBarrier"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/textViewAlcoholToleranceTextValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextViewLabel"
        android:text="@string/alcohol_tolerance_medium"
        app:layout_constraintBottom_toBottomOf="@id/textViewAlcoholToleranceLabel"
        app:layout_constraintTop_toTopOf="@id/textViewAlcoholToleranceLabel"
        app:layout_constraintStart_toEndOf="@id/textViewAlcoholToleranceLabel"
        app:layout_constraintEnd_toEndOf="parent"
        />



    <com.google.android.material.slider.Slider
        android:id="@+id/seekBarAlcoholTolerance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xs"
        android:layout_marginBottom="@dimen/spacing_sm"
        android:value="0"
        android:valueFrom="0"
        android:valueTo="2"
        android:stepSize="1"
        app:layout_constraintEnd_toEndOf="@id/textViewAlcoholToleranceTextValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAlcoholToleranceTextValue"
        android:padding="@dimen/spacing_sm"
        />


</merge>