<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/fragment_add_drink">

    <TextView
        android:id="@+id/textViewPresetDrinks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PillTitle"
        android:layout_marginStart="20dp"
        android:text="@string/presets"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonDeleteSelectedPreset"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_round_button_small_primary"
        android:contentDescription="@string/content_desc_delete_drink"
        android:padding="5dp"
        android:src="@drawable/ic_delete_white_24dp"
        android:tint="?attr/colorOnPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/textViewPresetDrinks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewPresetDrinks" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkBoxHideBuiltInPresets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/hide_built_in_presets"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPresetDrinks" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listViewPresetDrinks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/checkBoxHideBuiltInPresets"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</merge>